--- a/LMS/src/main/resources/com/example/firstguiapp/UserPage.fxml
+++ b/LMS/src/main/resources/com/example/firstguiapp/UserPage.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" fx:controller="com.example.firstguiapp.UserPage" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <Circle fill="DODGERBLUE" layoutX="70.0" layoutY="62.0" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
         <Label layoutX="131.0" layoutY="41.0" text="Name" />
