--- a/LMS/src/main/resources/com/example/firstguiapp/NotificationView.fxml
+++ b/LMS/src/main/resources/com/example/firstguiapp/NotificationView.fxml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="NotificationView">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.firstguiapp.NotificationView">
     <children>
         <ImageView fitHeight="275.0" fitWidth="410.0" layoutX="21.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../../../../../Image/image.png" />
+                <Image url="@../../../../../Image/img.png" />
             </image>
         </ImageView>
-        <Button layoutX="429.0" layoutY="70.0" mnemonicParsing="false" onAction="#btnNotifcationOnAction" prefHeight="40.0" prefWidth="138.0" text="Notification">
+        <Button layoutX="429.0" layoutY="70.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="138.0" text="Notification">
             <font>
                 <Font name="Bell MT" size="18.0" />
             </font>
