--- a/LMS/src/main/resources/com/example/firstguiapp/StudentMainPageView.fxml
+++ b/LMS/src/main/resources/com/example/firstguiapp/StudentMainPageView.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="525.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#002045" height="28.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" />
@@ -23,8 +22,7 @@
             <Font size="8.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7a8186" height="12.0" layoutX="249.0" layoutY="8.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="103.0" />
-      <Label layoutX="537.0" layoutY="5.0" text="En" textFill="#d7d4d4" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="12.0" layoutX="249.0" layoutY="8.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="103.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="110.0" layoutX="60.0" layoutY="53.0" stroke="#e8e8e8" strokeType="INSIDE" strokeWidth="0.0" width="480.0">
          <effect>
             <MotionBlur angle="21.18" radius="0.0">
@@ -34,15 +32,69 @@
             </MotionBlur>
          </effect>
       </Rectangle>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#eeeeee" height="90.0" layoutX="111.0" layoutY="63.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="72.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#eeeeee" height="90.0" layoutX="264.0" layoutY="63.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="72.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#eeeeee" height="90.0" layoutX="421.0" layoutY="63.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="72.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="28.0" layoutX="58.0" layoutY="222.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="28.0" layoutX="340.0" layoutY="222.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="28.0" layoutX="340.0" layoutY="275.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="28.0" layoutX="58.0" layoutY="275.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="71.0" layoutX="61.0" layoutY="372.0" stroke="BLACK" strokeType="INSIDE" width="121.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="71.0" layoutX="243.0" layoutY="372.0" stroke="BLACK" strokeType="INSIDE" width="121.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="71.0" layoutX="419.0" layoutY="372.0" stroke="BLACK" strokeType="INSIDE" width="121.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="71.0" layoutX="111.0" layoutY="72.0" stroke="WHITE" strokeType="INSIDE" width="72.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="71.0" layoutX="264.0" layoutY="72.0" stroke="WHITE" strokeType="INSIDE" width="72.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="71.0" layoutX="421.0" layoutY="72.0" stroke="WHITE" strokeType="INSIDE" width="72.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="28.0" layoutX="58.0" layoutY="222.0" stroke="#002045" strokeType="INSIDE" width="200.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="28.0" layoutX="340.0" layoutY="222.0" stroke="#002045" strokeType="INSIDE" width="200.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="28.0" layoutX="340.0" layoutY="275.0" stroke="#002045" strokeType="INSIDE" width="200.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="28.0" layoutX="58.0" layoutY="275.0" stroke="#002045" strokeType="INSIDE" width="200.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="71.0" layoutX="61.0" layoutY="372.0" stroke="#055e13" strokeType="INSIDE" width="121.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="71.0" layoutX="243.0" layoutY="372.0" stroke="#055e13" strokeType="INSIDE" width="121.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="71.0" layoutX="419.0" layoutY="372.0" stroke="#055e13" strokeType="INSIDE" width="121.0" />
+      <Label layoutX="133.0" layoutY="100.0" text="100%" />
+      <Label layoutX="124.0" layoutY="59.0" text="Attendance">
+         <font>
+            <Font size="9.0" />
+         </font>
+      </Label>
+      <Label layoutX="283.0" layoutY="59.0" text="Progress">
+         <font>
+            <Font size="9.0" />
+         </font>
+      </Label>
+      <Label layoutX="432.0" layoutY="59.0" text="Assignments">
+         <font>
+            <Font size="9.0" />
+         </font>
+      </Label>
+      <Label layoutX="296.0" layoutY="100.0" text="B" />
+      <Label layoutX="441.0" layoutY="99.0" text="100%" />
+      <Label layoutX="74.0" layoutY="229.0" text="Today">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Label>
+      <Label layoutX="353.0" layoutY="229.0" text="Subjects">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Label>
+      <Label layoutX="74.0" layoutY="281.0" text="Upcoming">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Label>
+      <Label layoutX="354.0" layoutY="281.0" text="Social">
+         <font>
+            <Font size="10.0" />
+         </font>
+      </Label>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#055e13" height="6.0" layoutX="111.0" layoutY="72.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="72.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#055e13" height="6.0" layoutX="111.0" layoutY="137.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="72.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#055e13" height="6.0" layoutX="264.0" layoutY="72.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="72.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#055e13" height="6.0" layoutX="265.0" layoutY="135.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="72.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#055e13" height="6.0" layoutX="421.0" layoutY="72.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="72.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#055e13" height="6.0" layoutX="421.0" layoutY="135.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="72.0" />
+      <Label layoutX="94.0" layoutY="419.0" text="Schedule" />
+      <Label layoutX="278.0" layoutY="419.0" text="Payment" />
+      <Label layoutX="455.0" layoutY="419.0" text="Courses" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#002045" height="28.0" layoutX="103.0" layoutY="380.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="37.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#002045" height="28.0" layoutX="285.0" layoutY="380.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="37.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#002045" height="28.0" layoutX="461.0" layoutY="380.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="37.0" />
+      <Label layoutX="223.0" layoutY="228.0" text="10" />
+      <Label layoutX="226.0" layoutY="280.0" text="5" />
+      <Label layoutX="511.0" layoutY="228.0" text="8" />
+      <Label layoutX="510.0" layoutY="280.0" text="#" />
    </children>
 </Pane>
