--- a/LMS/src/main/resources/com/example/firstguiapp/StudentMainPageView.fxml
+++ b/LMS/src/main/resources/com/example/firstguiapp/StudentMainPageView.fxml
@@ -6,10 +6,9 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="525.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="525.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.firstguiapp.StudentMainPage">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#002045" height="28.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" />
-      <Circle fill="DODGERBLUE" layoutX="58.0" layoutY="14.0" radius="9.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
       <Label layoutX="87.0" layoutY="5.0" prefHeight="18.0" prefWidth="60.0" text="Student Name" textFill="WHITE">
          <font>
             <Font size="8.0" />
@@ -91,8 +90,13 @@
       <Label layoutX="226.0" layoutY="280.0" text="5" />
       <Label layoutX="511.0" layoutY="228.0" text="8" />
       <Label layoutX="510.0" layoutY="280.0" text="#" />
-      <Button layoutX="114.0" layoutY="379.0" mnemonicParsing="false" />
+      <Button layoutX="114.0" layoutY="379.0" mnemonicParsing="false" onAction="#timetable" />
       <Button layoutX="295.0" layoutY="379.0" mnemonicParsing="false" />
-      <Button layoutX="472.0" layoutY="379.0" mnemonicParsing="false" />
+      <Button layoutX="472.0" layoutY="379.0" mnemonicParsing="false" onAction="#courses" />
+      <Button layoutX="14.0" layoutY="6.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="60.0" text="Profile" onAction="#profile">
+         <font>
+            <Font size="8.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
